<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_settings"
>

    <TextView  
		android:id="@+id/tvsettings"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/settings"
	    android:textSize="30dp"
	    android:paddingTop="10dp"
	    android:paddingBottom="10dp"
	    android:gravity="center_horizontal"
	    android:textStyle="bold"
	    android:textColor="#000000"
    />
    <ScrollView 
        android:id="@+id/svsettings"
	    android:orientation="horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_below="@+id/tvsettings"
    >
    
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_alignParentBottom="true"
    >
    
    <TextView     
	    android:id="@+id/tvnotation"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:paddingTop="10dp"
	    android:text="@string/notation"
	    android:textSize="20dp"
	    android:textStyle="bold"
	    android:gravity="center_horizontal"
	    android:textColor="#000000"
    />
     	<TextView  
	    android:id="@+id/tvnotationtext"
		android:layout_below="@+id/tvnotation"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/notationtext"
	    android:textSize="20dp"
	    android:gravity="center_horizontal"
	    android:textColor="#000000"
    />
    <RadioGroup 
        android:id="@+id/rgnotation"
        android:layout_below="@+id/tvnotationtext"
        android:layout_width="fill_parent" 
 	    android:layout_height="wrap_content"
 	    android:gravity="left"
 		android:orientation="vertical"
 	>
 		<RadioButton 
 	    	android:checked="false"
 			android:id="@+id/rbseeuropean" 
 			android:text="@string/seeuropean"
 		    android:textSize="20dp"
 			android:textColor="#000000"
 		/>
 		<RadioButton 
 			android:checked="false"
 			android:id="@+id/rbenglish" 
 			android:text="@string/english"
 			android:textSize="20dp"
 			android:textColor="#000000"
 		/>
 		<RadioButton 
 			android:checked="false"
 			android:id="@+id/rbnortheneuropean" 
 			android:text="@string/northeneuropean"
 			android:textSize="20dp"
 			android:textColor="#000000"
 		/>
 		<RadioButton 
 			android:checked="false"
 			android:id="@+id/rbbizantine" 
 			android:text="@string/bizantine"
 			android:textSize="20dp"
 			android:textColor="#000000"
 		/>
 		<RadioButton 
 			android:checked="false"
 			android:id="@+id/rbjapanese" 
 			android:text="@string/japanese"
 			android:textSize="20dp"
 			android:textColor="#000000"
 		/>
 		<RadioButton 
 			android:checked="false"
 			android:id="@+id/rbindian" 
 			android:text="@string/indian"
 			android:textSize="20dp"
 			android:textColor="#000000"
 		/>
 	</RadioGroup> 
 	
 	 	<TextView  
	    android:id="@+id/separator"
		android:layout_below="@+id/rgnotation"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/separator"
	    android:textStyle="bold"
	    android:textSize="20dp"
	    android:gravity="center_horizontal"
	    android:textColor="#000000"
    />
 	
 	<TextView  
	    android:id="@+id/tvhofentries"
		android:layout_below="@+id/separator"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:paddingTop="10dp"
	    android:text="@string/hofentries"
	    android:textStyle="bold"
	    android:textSize="20dp"
	    android:gravity="center_horizontal"
	    android:textColor="#000000"
    />
 	
 	<TextView  
	    android:id="@+id/tvhofentriestext"
		android:layout_below="@+id/tvhofentries"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/hofentriestext"
	    android:textSize="20dp"
	    android:gravity="center_horizontal"
	    android:textColor="#000000"
    />
 	<Spinner 
        android:id="@+id/sphofentries"
        android:layout_below="@+id/tvhofentriestext"
        android:layout_width="300dip"
        android:layout_height="60dp"
        android:gravity="center_horizontal"
    />
    
    <TextView  
	    android:id="@+id/separator2"
		android:layout_below="@+id/sphofentries"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/separator"
	    android:textStyle="bold"
	    android:textSize="20dp"
	    android:gravity="center_horizontal"
	    android:textColor="#000000"
    />
    
    <TextView  
	    android:id="@+id/tvinformer"
		android:layout_below="@+id/separator2"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:paddingTop="10dp"
	    android:text="@string/informer"
	    android:textSize="20dp"
	    android:textStyle="bold"
	    android:gravity="center_horizontal"
	    android:textColor="#000000"
    />
    <TextView  
	    android:id="@+id/tvinformertext"
		android:layout_below="@+id/tvinformer"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/informertext"
	    android:textSize="20dp"
	    android:gravity="center_horizontal"
	    android:textColor="#000000"
    />
    
    <RadioGroup 
        android:id="@+id/rginformer"
        android:layout_below="@+id/tvinformertext"
        android:layout_width="fill_parent" 
 	    android:layout_height="wrap_content"
 	    android:gravity="center_horizontal"
 		android:orientation="vertical"
 	>
 		<RadioButton 
 	    	android:checked="true"
 			android:id="@+id/rbyes" 
 			android:text="@string/yes"
 		    android:textSize="20dp"
 			android:textColor="#000000"
 		/>
 		<RadioButton 
 			android:checked="false"
 			android:id="@+id/rbno" 
 			android:text="@string/no"
 			android:textSize="20dp"
 			android:textColor="#000000"
 		/>
 	</RadioGroup> 
 		    <Button 
			android:id="@+id/endgame"
			android:layout_below="@+id/rginformer"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:height="50dp"
			android:text="@string/back"
			android:textSize="20dp"
	        android:textStyle="bold"
			android:background="@drawable/custom_button"	
			android:layout_margin="3dp"
		/>	
 	</RelativeLayout>
    </ScrollView>
</RelativeLayout>